<resources>
    <string name="app_name">CineMatching</string>
    <string name="title_activity_sample_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_forgotten_password">Forgot your password ?</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">%1$d</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_birthdate">DD/MM/YYYY</string>
    <string name="prompt_label_birthdate">Birthdate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_nickname">Nickname</string>
    <string name="nav_header_email">android.studio@android.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_screening">Screening</string>
    <string name="menu_others">Others</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_recents">Recents</string>
    <string name="menu_favorites">Favorites</string>
    <string name="desc_user_params_image">Your profile picture</string>
</resources>
